infrastructure/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: szakdolgozat-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - szakdolgozat.mbraptor.tech
    - ci.mbraptor.tech
    secretName: tls-mbraptor.tech
  rules:
  - host: ci.mbraptor.tech
    http:
      paths:
      - backend:
          serviceName: ci-jenkins
          servicePort: 8080
